Fixed missing HREFs on links. Narrowed gap between panes.

--- a/silsannotate/static/version5/css/main.css
+++ b/silsannotate/static/version5/css/main.css
@@ -26,7 +26,7 @@ article {
   position: fixed;
   top:35%;
   height:35%;
-  width:800px;
+  width:760px;
   height:25%;
   opacity:0.5;
   border: 1px solid #999;
@@ -48,7 +48,7 @@ article img {
   width:450px;
   padding-right:30px;
   margin-top:50px;
-  margin-left:50px;  
+  margin-left:30px;  
   font-family: verdana, sans-serif;
   color: #444;
   font-size: 11px;
@@ -66,7 +66,7 @@ p,h1,h2,h3,h4,h5,h6,
 }*/
 
 #container {
-  min-width:1240px;
+  min-width:1280px;
 }
 
 .annotator-wrapper {
